# Lizard

./: .bazelrc  .ccls  .clang-format  .clang-tidy  .cmake-format.yaml  .codecov.yml  .compile_flags.txt  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  config.yaml  settings.toml  toolchain.cmake
examples/: benchmark.cpp  client_example.cpp  server_example.cpp
source/: lizard_cache.cpp  lizard_cache.h  lizard_client.cpp  lizard_client.h  lizard_compression.cpp  lizard_compression.h  lizard_connection.cpp  lizard_connection.h  lizard_protocol.cpp  lizard_protocol.h  lizard_server.cpp  lizard_server.h  lizard_tls.cpp  lizard_tls.h
tests/: test_protocol.cpp
